@@ -1,11 +1,10 @@
 **ePub3-itizer** is a python 3.4 or later output plugin for Sigil 
 that will convert a valid epub2 epub into a valid epub3 epub.
 
-Updated: October 10, 2020
+Updated: December 15, 2020
 
 **Very Important Note**
-Support for this plugin is only provided for Sigil 0.9.8 or later. 
-This plugin requires Sigil 0.8.2 or later to even operate.
+Support for this plugin is only provided for Sigil 1.0.0 or later. 
 
 
 **How it Converts from valid epub2 to epub3**
